k8s/base/drumscore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drumscore
spec:
  selector:
    app: drumscore
  ports:
    - port: 8080
      targetPort: 8080
